bill input and percentage varaibles

--- a/index.html
+++ b/index.html
@@ -9,14 +9,43 @@
   <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
+
+
+  <!-- <form action="/action.php" method="post">
+    Name: <input name="name" type="text" /> <br /> 
+    Age: <input max="99" min="1" name="age" step="1" type="number" value="18" /> <br />
+    <select name="gender">
+      <option selected="selected" value="male">Male</option>
+      <option value="female">Female</option>
+    </select><br /> 
+    <input checked="checked" name="newsletter" type="radio" value="daily" /> Daily <input
+      name="newsletter" type="radio" value="weekly" /> Weekly<br /> <textarea cols="20" name="comments"
+      rows="5">Comment</textarea><br /> <label><input name="terms" type="checkbox" value="tandc" />Accept terms</label>
+    <br /> <input type="submit" value="Submit" />
+  </form> -->
+
+
+  <!-- <form action="" method="get" class="form-example">
+    <div class="form-example">
+      <label for="name">Enter your name: </label>
+      <input type="text" name="name" id="name" required />
+    </div>
+    <div class="form-example">
+      <label for="email">Enter your email: </label>
+      <input type="email" name="email" id="email" required />
+    </div>
+    <div class="form-example">
+      <input type="submit" value="Subscribe!" />
+    </div>
+  </form> -->
+
+  
+
+
   <div class="logo-wrapper">
     <img src="./assets/images/splitter-logo.png" alt="Splitter Logo" style="width: 80px; border-radius: 20px;">
   </div>
-
-
-
   <div class="calc-wrapper">
-
     <div class="desktop-wrapper">
       <div class="user-total-input">
         <h3 class="bill-header">Bill</h3>
@@ -59,7 +88,6 @@
         </div>
       </div>
     </div>
-
     <div class="calc-output">
       <div class="tip-amount">
         <div class="title">
@@ -83,11 +111,7 @@
         <p>reset</p>
       </div>
     </div><!-- Calc Output -->
-
   </div><!-- Calc Wrapper -->
-
-
-  
   <script src="./assets/js/app.js"></script>
 </body>
 </html>
