reset btn default

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
   
 
 
-  <div class="logo-wrapper">
+  <!-- <div class="logo-wrapper">
     <img src="./assets/images/splitter-logo.png" alt="Splitter Logo" style="width: 80px; border-radius: 20px;">
-  </div>
+  </div> -->
   <div class="calc-wrapper">
-    <div class="desktop-wrapper">
+    <!-- <div class="desktop-wrapper">
       <div class="user-total-input">
         <h3 class="bill-header">Bill</h3>
         <div class="user-total-input-wrapper">
@@ -87,7 +87,10 @@
           <input type="text" id="user-guest-input" name="user-guest-input" placeholder="4">
         </div>
       </div>
-    </div>
+    </div> -->
+
+
+
     <div class="calc-output">
       <div class="tip-amount">
         <div class="title">
@@ -107,7 +110,7 @@
           <p>$0.00</p>
         </div>
       </div>
-      <div class="calc-reset">
+      <div class="calc-reset reset-wrapper">
         <p>reset</p>
       </div>
     </div><!-- Calc Output -->
